--- a/TourPlanner.UI/Views/TourDetails.xaml
+++ b/TourPlanner.UI/Views/TourDetails.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TourPlanner.UI.Views.Map"
+﻿<UserControl x:Class="TourPlanner.UI.Views.TourDetails"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,11 +6,7 @@
              xmlns:local="clr-namespace:TourPlanner.UI.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    
-    <Border>
-        <Grid>
+    <Grid>
             
-        </Grid>
-
-    </Border>
+    </Grid>
 </UserControl>
